Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB


    Private Class BTI429_64
        Public Declare Function BTI429_BCDGetData Lib "BTI42964.DLL" Alias "BTI429_BCDGetData" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BCDGetMant Lib "BTI42964.DLL" Alias "BTI429_BCDGetMant" (ByVal msg As UInt32, ByVal sigdig As UInt16) As UInt32
        Public Declare Function BTI429_BCDGetSign Lib "BTI42964.DLL" Alias "BTI429_BCDGetSign" (ByVal msg As UInt32) As UInt16
        Public Declare Function BTI429_BCDGetSSM Lib "BTI42964.DLL" Alias "BTI429_BCDGetSSM" (ByVal msg As UInt32) As UInt16
        Public Declare Sub BTI429_BCDGetVal Lib "BTI42964.DLL" Alias "BTI429_BCDGetVal" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String)
        Public Declare Function BTI429_BCDPutData Lib "BTI42964.DLL" Alias "BTI429_BCDPutData" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutMant Lib "BTI42964.DLL" Alias "BTI429_BCDPutMant" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigdig As UInt16, ByVal sign As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutSign Lib "BTI42964.DLL" Alias "BTI429_BCDPutSign" (ByVal msg As UInt32, ByVal sign As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutSSM Lib "BTI42964.DLL" Alias "BTI429_BCDPutSSM" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutVal Lib "BTI42964.DLL" Alias "BTI429_BCDPutVal" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String) As UInt32
        Public Declare Function BTI429_BNRGetData Lib "BTI42964.DLL" Alias "BTI429_BNRGetData" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BNRGetMant Lib "BTI42964.DLL" Alias "BTI429_BNRGetMant" (ByVal msg As UInt32, ByVal sigbit As UInt16) As UInt32
        Public Declare Function BTI429_BNRGetSign Lib "BTI42964.DLL" Alias "BTI429_BNRGetSign" (ByVal msg As UInt32) As UInt16
        Public Declare Function BTI429_BNRGetSSM Lib "BTI42964.DLL" Alias "BTI429_BNRGetSSM" (ByVal msg As UInt32) As UInt16
        Public Declare Sub BTI429_BNRGetVal Lib "BTI42964.DLL" Alias "BTI429_BNRGetVal" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String)
        Public Declare Function BTI429_BNRPutData Lib "BTI42964.DLL" Alias "BTI429_BNRPutData" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutMant Lib "BTI42964.DLL" Alias "BTI429_BNRPutMant" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigbit As UInt16, ByVal twos As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutSign Lib "BTI42964.DLL" Alias "BTI429_BNRPutSign" (ByVal msg As UInt32, ByVal twos As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutSSM Lib "BTI42964.DLL" Alias "BTI429_BNRPutSSM" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutVal Lib "BTI42964.DLL" Alias "BTI429_BNRPutVal" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String) As UInt32
        Public Declare Function BTI429_ChClear Lib "BTI42964.DLL" Alias "BTI429_ChClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChConfig Lib "BTI42964.DLL" Alias "BTI429_ChConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChGetCount Lib "BTI42964.DLL" Alias "BTI429_ChGetCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChGetInfo Lib "BTI42964.DLL" Alias "BTI429_ChGetInfo" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ChIs429 Lib "BTI42964.DLL" Alias "BTI429_ChIs429" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChIsRcv Lib "BTI42964.DLL" Alias "BTI429_ChIsRcv" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChIsXmt Lib "BTI42964.DLL" Alias "BTI429_ChIsXmt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChPause Lib "BTI42964.DLL" Alias "BTI429_ChPause" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChPauseCheck Lib "BTI42964.DLL" Alias "BTI429_ChPauseCheck" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChResume Lib "BTI42964.DLL" Alias "BTI429_ChResume" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChStart Lib "BTI42964.DLL" Alias "BTI429_ChStart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChStop Lib "BTI42964.DLL" Alias "BTI429_ChStop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChSyncDefine Lib "BTI42964.DLL" Alias "BTI429_ChSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChTriggerDefine Lib "BTI42964.DLL" Alias "BTI429_ChTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FilterClear Lib "BTI42964.DLL" Alias "BTI429_FilterClear" (ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FilterDefault Lib "BTI42964.DLL" Alias "BTI429_FilterDefault" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterRd Lib "BTI42964.DLL" Alias "BTI429_FilterRd" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterSet Lib "BTI42964.DLL" Alias "BTI429_FilterSet" (ByVal configval As UInt32, ByVal labelval As Int32, ByVal sdimask As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterWr Lib "BTI42964.DLL" Alias "BTI429_FilterWr" (ByVal msgaddr As UInt32, ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FldGetData Lib "BTI42964.DLL" Alias "BTI429_FldGetData" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_FldGetLabel Lib "BTI42964.DLL" Alias "BTI429_FldGetLabel" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetParity Lib "BTI42964.DLL" Alias "BTI429_FldGetParity" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetSDI Lib "BTI42964.DLL" Alias "BTI429_FldGetSDI" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetValue Lib "BTI42964.DLL" Alias "BTI429_FldGetValue" (ByVal msgval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
        Public Declare Function BTI429_FldPutData Lib "BTI42964.DLL" Alias "BTI429_FldPutData" (ByVal msgval As UInt32, ByVal data As UInt32) As UInt32
        Public Declare Function BTI429_FldPutLabel Lib "BTI42964.DLL" Alias "BTI429_FldPutLabel" (ByVal msgval As UInt32, ByVal label As UInt16) As UInt32
        Public Declare Function BTI429_FldPutSDI Lib "BTI42964.DLL" Alias "BTI429_FldPutSDI" (ByVal msgval As UInt32, ByVal sdi As UInt16) As UInt32
        Public Declare Function BTI429_FldPutValue Lib "BTI42964.DLL" Alias "BTI429_FldPutValue" (ByVal msgval As UInt32, ByVal dataval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
        Public Declare Function BTI429_ListAsyncCreate Lib "BTI42964.DLL" Alias "BTI429_ListAsyncCreate" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataRd Lib "BTI42964.DLL" Alias "BTI429_ListDataRd" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataWr Lib "BTI42964.DLL" Alias "BTI429_ListDataWr" (ByVal value As UInt32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListRcvCreate Lib "BTI42964.DLL" Alias "BTI429_ListRcvCreate" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListStatus Lib "BTI42964.DLL" Alias "BTI429_ListStatus" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListXmtCreate Lib "BTI42964.DLL" Alias "BTI429_ListXmtCreate" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgBlockRd Lib "BTI42964.DLL" Alias "BTI429_MsgBlockRd" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgBlockWr Lib "BTI42964.DLL" Alias "BTI429_MsgBlockWr" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgCountRd Lib "BTI42964.DLL" Alias "BTI429_MsgCountRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgCountWr Lib "BTI42964.DLL" Alias "BTI429_MsgCountWr" (ByVal bitcount As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgCreate Lib "BTI42964.DLL" Alias "BTI429_MsgCreate" (ByVal configval As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgDataCountWr Lib "BTI42964.DLL" Alias "BTI429_MsgDataCountWr" (ByVal dataval As UInt32, ByVal bitcount As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgDataRd Lib "BTI42964.DLL" Alias "BTI429_MsgDataRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_MsgDataWr Lib "BTI42964.DLL" Alias "BTI429_MsgDataWr" (ByVal value As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupBlockRd Lib "BTI42964.DLL" Alias "BTI429_MsgGroupBlockRd" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=2)> ByVal msgfields As MSGFIELDS429(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupBlockWr Lib "BTI42964.DLL" Alias "BTI429_MsgGroupBlockWr" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=2)> ByVal msgfields As MSGFIELDS429(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupRd Lib "BTI42964.DLL" Alias "BTI429_MsgGroupRd" (ByVal msgdataptr As UInt32(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupWr Lib "BTI42964.DLL" Alias "BTI429_MsgGroupWr" (ByVal msgdataptr As UInt32(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgIsAccessed Lib "BTI42964.DLL" Alias "BTI429_MsgIsAccessed" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgSkipRd Lib "BTI42964.DLL" Alias "BTI429_MsgSkipRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
